# arf-535

./: .gitignore  Cargo.toml
assembler/: Cargo.toml
assembler/src/: assembler.pest  assembler.pest.old  gen_functions.rs  lib.rs
gui/: .gitignore  Cargo.toml  test.asm
gui/asm/: 1m.asm  dtmf.asm  matrix.asm  sort.asm  test.asm
gui/src/: main.rs
gui/src/displays/: adc.rs  cache.rs  condition.rs  f_register.rs  memory.rs  mod.rs  pipeline.rs  register.rs  timer.rs
memory-demo/: Cargo.toml
memory-demo/src/: demo.txt  main.rs
pipeline-demo/: Cargo.toml
pipeline-demo/src/: main.rs
proposal/: .gitignore  assembler.pest  assembler.py  convert.py  final.typ  instructions.json  instructions.typ  instructions2.json  instructions_old.json  insturctions.py  output.typ  pyproject.toml  rust.py  update.py  update2.py
simulator/: Cargo.toml
simulator/src/: enums.rs  instruction.rs  lib.rs  memory.rs  pipeline.rs  streams.rs
