[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
simulator = { workspace = true }
assembler = { workspace = true }

eframe = { version = "0.31", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

# For image support:
egui_extras = { version = "0.31", features = ["default", "image"] }

env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
egui_table = "0.3.0"
regex = "1.11.1"
catppuccin-egui = { version = "5.5.0", default-features = false, features = ["egui31"] }
log = "0.4.27"
egui_tiles = "0.12.0"
